# HackerDojoPythonGroup

./: .gitignore  38-puzzle.py  DojoPython classes.ipynb  DojoPython_dataclasses.ipynb  JS-has-problems.js  README.md  _config.yml  best-practices.md  find_ips.py  iterators and generators.ipynb  modern-python-toolset.md  pyproject.toml  python-gotchas.md  python-intro-notes.txt  python-pitfalls.md  python-recipes.md  python-recipes.txt  requirements.txt  serialize.md
ChatGPTAPI/: .env-template  main_fastapi.py  main_textual.py  nutrition.py  pyproject.toml  sample-input.txt
PyPI/: PYPI_secret_example.sh  PyPI_instructions.md  README.md  benchmark.py  benchmark_demo.py  pyproject.toml
PyPI/src/benchmark/: __init__.py  benchmark.py
bart-vibe/: .env.example  README.md  bart_data_20250909_191423.json  bart_data_20250909_191944.json  bart_secrets.sh  bart_trips_20250909_192534.json  bart_trips_20250909_192701.json  bart_vehicles_20250909_192534.json  bart_vehicles_20250909_192701.json  caltrain_data_20250909_191423.json  caltrain_data_20250909_191944.json  caltrain_data_20250909_192534.json  caltrain_data_20250909_192701.json  location_tracker.py  map.html  pyproject.toml  pytest.ini  run_tests.py  server.py  test_location_tracker.py  test_refresh_button.py  test_refresh_functionality.py  test_report.py  test_server.py  transit_locations_20250909_192850.json  transit_locations_20250909_193110.json  transit_locations_20250909_193614.json  transit_locations_20250909_193635.json  transit_locations_20250909_194431.json  transit_locations_20250909_194505.json  transit_locations_20250909_194606.json  transit_locations_20250909_194643.json  transit_locations_20250909_200219.json  transit_summary_20250909_191423.json  transit_summary_20250909_191944.json  transit_summary_20250909_192534.json  transit_summary_20250909_192701.json  transit_tracker.py
fire_challenge/: CHANGELOG.md  LICENSE  README.md  Sam_Player.py  Sam_Universal.py  Sam_player.py  __init__.py  beginner_tutorial.py  browse_maps.py  example_player.py  fire_challenge.py  leaderboard.py  petes_player.py  pyproject.toml  sams_player.py
fire_challenge/examples/: feature_demonstrations.py
fire_challenge/fire_challenge/: __init__.py  challenge_maps.py  fire_challenge.py
fire_challenge/jh/: Makefile  flow_player.py
fire_challenge/jh/prompts/: 001.md
fire_challenge/jh/tests/: example_player_test.py  flow_player_test.py  foo_test.py
(+274 files in other folders)
