[project]
name = "fire-challenge"
version = "2.0.1"
description = "A Python module for grid-based fire spread challenges"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Peter Theobald", email = "PeterTheobald@users.noreply.github.com"}
]
keywords = ["education", "programming", "game", "challenge", "learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Topic :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/PeterTheobald/HackerDojoPythonGroup/tree/main/fire_challenge"
Repository = "https://github.com/PeterTheobald/HackerDojoPythonGroup/tree/main/fire_challenge"
Issues = "https://github.com/PeterTheobald/HackerDojoPythonGroup/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fire_challenge"]

